--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -77,7 +77,7 @@ fieldset.display-actions + fieldset.display-actions {
 /* UCP - Attachments
 ========================================================================== */
 
-.ucp-main form[action*='ucp.php'][action*='attachments'] .topiclist {
+.ucp-main form[action*='ucp_attachments'][action*='attachments'] .topiclist {
 	& > li.header dl dt a {
 		font-family: $font-01;
 		font-variant: none;
@@ -114,16 +114,19 @@ fieldset.display-actions + fieldset.display-actions {
 /* UCP - Profile
 ========================================================================== */
 
-.ucp-main form[action*='ucp.php'][action*='profile_info'] fieldset dl dd label[for*='bday'] select {
-	width: auto;
-	min-width: 80px;
-	margin: 0 0 0 5px;
+.ucp-main form[action*='ucp_profile'][action*='profile_info'] fieldset dl dd label[for*='bday'] {
+	margin: 0;
+	select {
+		width: auto;
+		min-width: 80px;
+		margin: 0 5px;
+	}
 }
 
 /* UCP - Signature
 ========================================================================== */
 
-.ucp-main form[action*='ucp.php'][action*='signature'] .signature.standalone {
+.ucp-main form[action*='ucp_profile'][action*='signature'] .signature.standalone {
 	margin-bottom: 30px;
 	&:after {
 		content: '';
@@ -137,7 +140,7 @@ fieldset.display-actions + fieldset.display-actions {
 /* UCP - Avatar
 ========================================================================== */
 
-.cp-main form[action*='ucp.php'][action*='avatar'] {
+.cp-main form[action*='ucp_profile'][action*='avatar'] {
 	.avatar {
 		border: 5px solid $color-04;
 		margin: 0 0 10px 0;
@@ -157,7 +160,7 @@ fieldset.display-actions + fieldset.display-actions {
 				@include flex-flow(row nowrap);
 				align-items: flex-start;
 				font-size: 0;
-				margin: 0 70px 0 0;
+				margin: 0 65px 0 0;
 				&:before, select {
 					font-size: rem(14px);
 				}
@@ -217,7 +220,7 @@ fieldset.display-actions + fieldset.display-actions {
 /* UCP - Global Settings
 ========================================================================== */
 
-.cp-main form[action*='ucp.php'][action*='personal'] {
+.cp-main form[action*='ucp_prefs'][action*='personal'] {
 	#tz_select_date {
 		display: flex !important;
 		flex-flow: row nowrap;
@@ -226,7 +229,7 @@ fieldset.display-actions + fieldset.display-actions {
 			@include flex;
 		}
 		.button2 {
-			margin: 0 0 5px 10px;
+			margin: 0 0 0 5px;
 		}
 	}
 }
@@ -330,13 +333,45 @@ fieldset.display-actions + fieldset.display-actions {
 /* UCP - Private Messages - Rules, folders, and settings
 ========================================================================== */
 
-.cp-main form[action*='ucp.php'][action*='options'] {
+.cp-main form[action*='ucp_pm'][action*='options'] {
+	.def-rules {
+		display: inline-block;
+		li {
+			margin: 0 0 10px 0;
+			.right-box {
+				float: right;
+				clear: right;
+				margin: -3px 0 0 20px;
+				.button2 {
+					@include small-form-ele;
+				}
+			}
+			&:last-child {
+				margin: 0;
+			}
+		}
+	}
 	fieldset dl {
 		dd {
-			select[name='full_move_to'] {
+			@include flex-flow(row nowrap);
+			align-items: flex-start;
+			margin-top: 0 !important;
+			select, .inputbox {
+				@include flex(base);
+				& + .button2 {
+					margin: 0 0 0 5px;
+				}
+			}
+			.button2, select[name='move_to'], select[name='full_move_to'] {
+				@include flex;
+			}
+			label[for='remove_action1'], label[for='full_action2'] {
+				margin-top: 3px;
+			}
+			select[name='move_to'], select[name='full_move_to'] {
+				@include small-form-ele;
 				width: auto;
 				min-height: 0;
-				padding: 5px 10px;
 				font-size: rem(13px);
 			}
 		}
