--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -90,8 +90,7 @@ input[type='checkbox'], input[type='radio']  {
 }
 
 .button-icon-only {
-	padding: 5px;
-	line-height: 1;
+	@include small-form-ele($padding: 5px);
 }
 
 fieldset.submit-buttons {
