--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
@@ -118,9 +118,11 @@
 }
 
 // Smaller sized form elements
-@mixin small-form-ele {
-	padding: 5px 10px;
-	line-height: 1;
+@mixin small-form-ele($padding: 5px 10px, $lh: '') {
+	padding: $padding;
+	@if ($lh != false) {
+		line-height: 1;
+	}
 }
 
 // Sortable headers
