--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -31,8 +31,7 @@
 		width: auto;
 		display: inline-block;
 		margin: 0;
-		padding: 5px 10px;
-		line-height: 1;
+		@include small-form-ele;
 		font-size: rem(13px);
 		min-height: 0;
 	}
