--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -48,6 +48,10 @@ input[type='checkbox'], input[type='radio']  {
 	margin: 0 5px 0 0;
 }
 
+button[disabled], html input[disabled] {
+	cursor: not-allowed;
+}
+
 /* Search Box
 ========================================================================== */
 
