--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/stylesheet.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/stylesheet.scss
@@ -43,10 +43,10 @@
  * 15.0 Special Effects
  */
 
-// SCSS VARIABLES
-@import 'vars';
-@import 'classes';
-@import 'fa/font-awesome';
+// SCSS VARS
+@import "partials/vars";
+@import "partials/classes";
+@import "fa/font-awesome";
 
 /* 1.0 CSS Reset http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126
 ---------------------------------------- */
