Add precise body class and no topics body class, adjust footer script include, update simple header/footer, change styles to use precise body class instead

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -23,7 +23,7 @@
 								<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
 								<!-- EVENT overall_footer_copyright_append -->
 								<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
-							</p>					
+							</p>
 						</div>
 						<div class="flex-column">
 							<h4>Random Content Goes Here</h4>
@@ -41,7 +41,7 @@
 								<a class="button-link" href="//google.com" target="_blank">
 									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
 								</a>
-							</div>	
+							</div>
 							<h4>Affiliates</h4>
 							<div class="button-wrapper">
 								<a class="button-link" href="//google.com" target="_blank">
@@ -73,8 +73,8 @@
 								</a>
 								<a class="button-link" href="//google.com" target="_blank">
 									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>	
-							</div>				
+								</a>
+							</div>
 						</div>
 					</div>
 					<div class="flex-row flex-row-20">
@@ -83,12 +83,12 @@
 								<!-- EVENT overall_footer_timezone_before -->
 								<i class="icon fa-clock-o fa-fw" aria-hidden="true"></i> {S_TIMEZONE}
 								<!-- EVENT overall_footer_timezone_after -->
-								<span class="bullet">&bull;</span>	
+								<span class="bullet">&bull;</span>
 								<!-- IF not S_IS_BOT -->
 									<a href="{U_DELETE_COOKIES}">
 										<i class="icon fa-trash fa-fw" aria-hidden="true"></i> {L_DELETE_COOKIES}
 									</a>
-								<!-- ENDIF -->										
+								<!-- ENDIF -->
 							</p>
 						</div>
 					</div>
@@ -129,7 +129,7 @@
 	<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/core.js?assets_version={T_ASSETS_VERSION}"></script>
 	<!-- INCLUDEJS forum_fn.js -->
 	<!-- INCLUDEJS ajax.js -->
-	<script type="text/javascript" src="{T_TEMPLATE_PATH}/functions.js?assets_version={T_ASSETS_VERSION}"></script>
+	<!-- INCLUDEJS functions.js -->
 
 	<!-- IF S_ALLOW_CDN -->
 		<script type="text/javascript">
