--- a/khyeras/styles/khyeras_v1/template/simple_header.html
+++ b/khyeras/styles/khyeras_v1/template/simple_header.html
@@ -40,7 +40,7 @@
 
 </head>
 
-<body id="phpbb" class="nojs {S_CONTENT_DIRECTION} {BODY_CLASS}">
+<body id="phpbb" class="simple-phpbb nojs {S_CONTENT_DIRECTION} {BODY_CLASS}<!-- IF SCRIPT_NAME == 'viewforum' or SCRIPT_NAME == 'search' --><!-- IF TOTAL_PAGES == 0 --> no-topics<!-- ENDIF--><!-- ENDIF--> section-{SCRIPT_NAME}" data-class="section {SCRIPT_NAME} <!-- IF S_IN_MCP and L_TITLE neq TITLE -->{L_TITLE|lower}<!-- ELSE -->{PAGE_TITLE|lower}<!-- ENDIF-->">
 
 <!-- EVENT simple_header_body_before -->
 
